feat(seo+env): sitemap endpoint + externalize JWT/CORS/site-url config
- Add SitemapController for GET /sitemap.xml (hospitals + specialties + community)
- Permit /sitemap.xml in SecurityConfig
- Externalize JWT secret to JWT_SECRET env var with safe dev fallback
- Externalize CORS origins to app.cors.allowed-origins (used by SecurityConfig + WebConfig)
- Add app.site-url config for sitemap base URL
- Create application-prod.yaml template with env var placeholders